# coding-challenge-data-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: db.py  dialog_repository.py  main.py  models.py
app/migrations/: env.py
app/migrations/versions/: 9947d2b2e466_init_database.py  9983a83e94f3_add_consent_column.py  f9c634db477d_create_dialog_table.py
scripts/: test
tests/: test_api.py
