[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["dubuisa <antoine.dubuis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
fastapi = "^0.79.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
