[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["dubuisa <antoine.dubuis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
fastapi = "^0.79.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.18.2"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.28.1"
aiosqlite = "^0.17.0"
black = "^22.6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
